checkstyle has been improved